// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Snapshot Tests should match snapshot when no session 1`] = `<div />`;

exports[`Snapshot Tests should match snapshot with custom className 1`] = `
<div>
  <div
    class="test-class"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="User menu"
      class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-100 transition-colors focus:outline-none focus:ring-2 focus:ring-orange-background focus:ring-offset-2"
      data-state="closed"
      id="radix-«r1q»"
      type="button"
    >
      <div
        class="w-8 h-8 rounded-full bg-orange-background flex items-center justify-center text-white text-sm font-medium"
      >
        JD
      </div>
      <span
        class="text-lg font-semibold text-orange-background hidden sm:block"
      >
        Welcome, 
        John
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down w-4 h-4 text-gray-background"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Snapshot Tests should match snapshot with full user data 1`] = `
<div>
  <div
    class=""
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="User menu"
      class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-100 transition-colors focus:outline-none focus:ring-2 focus:ring-orange-background focus:ring-offset-2"
      data-state="closed"
      id="radix-«r1m»"
      type="button"
    >
      <img
        alt="Profile"
        class="w-8 h-8 rounded-full border border-form-border-color object-cover"
        src="https://example.com/avatar.jpg"
      />
      <span
        class="text-lg font-semibold text-orange-background hidden sm:block"
      >
        Welcome, 
        John
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down w-4 h-4 text-gray-background"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Snapshot Tests should match snapshot without user image 1`] = `
<div>
  <div
    class=""
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="User menu"
      class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-100 transition-colors focus:outline-none focus:ring-2 focus:ring-orange-background focus:ring-offset-2"
      data-state="closed"
      id="radix-«r1o»"
      type="button"
    >
      <div
        class="w-8 h-8 rounded-full bg-orange-background flex items-center justify-center text-white text-sm font-medium"
      >
        JD
      </div>
      <span
        class="text-lg font-semibold text-orange-background hidden sm:block"
      >
        Welcome, 
        John
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down w-4 h-4 text-gray-background"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;
